DuPont DevSB/src/objects/Cast_Iron_Error_Handling__c.object
<CustomObject>
    <description>Captures sync error data for Cast Iron integration.</description>
    <fields>
        <fullName>Message_Type__c</fullName>
        <label>Message Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outbound_Notification_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outbound Notification ID</label>
        <referenceTo>Outbound_Notification__c</referenceTo>
        <relationshipLabel>Cast Iron Error Handling</relationshipLabel>
        <relationshipName>Cast_Iron_Error_Handling</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <description>Used to store Castiron raw request</description>
        <label>Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <description>Used to store CastIron Raw Response</description>
        <label>Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>activityID__c</fullName>
        <label>Activity Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>activityName__c</fullName>
        <label>Activity Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>applianceName__c</fullName>
        <label>Appliance Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>emailRecipient__c</fullName>
        <label>Email Recipient</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>faultMessage__c</fullName>
        <label>Fault Message</label>
        <length>3999</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>faultName__c</fullName>
        <label>Fault Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>faultTime__c</fullName>
        <label>Fault Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jobId__c</fullName>
        <label>Job Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jobStartTime__c</fullName>
        <label>Job Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>orchestrationName__c</fullName>
        <label>Orchestration Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>projectName__c</fullName>
        <label>Project Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sourceApplication__c</fullName>
        <label>Source Application</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>targetApplication__c</fullName>
        <label>Target Application</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Cast Iron Error Handling</label>
    <nameField>
        <displayFormat>CIE-{00000000}</displayFormat>
        <label>Cast Iron Error Handling Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cast Iron Error Handling</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>